# Pixhell

./: .gitignore  01_hello_SDL.cpp  CMakeLists.txt  Pixhell.sln  Pixhell.vcxproj  Pixhell.vcxproj.filters  README.md  main.cpp
cmake/: FindSDL2.cmake
pixhell/: CMakeLists.txt
pixhell/src/: main.cpp
src/: main.cpp
